Adds to generative AI section.

--- a/formulary.tex
+++ b/formulary.tex
@@ -88,6 +88,8 @@
 % ------------------------------------------------------------------------------ 
 \section*{Machine Learning Submodule}\label{sec:ml_appendix}
   \input{ml_submodule/ml.tex}
+\section*{Math Submodule}
+  \input{math_submodule/math.tex}
 % ======================================================================
 % Todo
 % ======================================================================
