--- a/formulary.tex
+++ b/formulary.tex
@@ -34,8 +34,10 @@
 \usepackage{formularyETH/extern/formularyETH_tikz}
 \usepackage{formularyETH/extern/formularyETH_coding}
 \usepackage{formularyETH/extern/formularyETH_algorithms}
-\usepackage{math_submodule/formularyMacros}
-\usepackage{ml_submodule/formularyMacros}
+\usepackage{ml_submodule/mlMacros}
+\usepackage{dl_submodule/dlMacros}
+\usepackage{dl_submodule/colors}
+\usepackage{math_submodule/mathMacros}
 \usepackage{ml_submodule/macros/spaces}
 \usepackage{ml_submodule/macros/nlu}
 \usepackage{ml_submodule/macros/nn}
@@ -88,8 +90,12 @@
 % ------------------------------------------------------------------------------ 
 \section*{Machine Learning Submodule}\label{sec:ml_appendix}
   \input{ml_submodule/ml.tex}
-\section*{Math Submodule}
-  \input{math_submodule/math.tex}
+\newpage
+\section*{Deep Learning Submodule}
+  \input{dl_submodule/dl.tex}
+% \newpage
+% \section*{Math Submodule}
+%   \input{math_submodule/math.tex}
 % ======================================================================
 % Todo
 % ======================================================================
